# aws-robomaker

./: README.md  cloud-connected-robots.md  dcv.md  development-tools.md  greengrass-with-docker.md  robomaker-helloworld.md  robomaker-simulation.md  robomaker-workshop.md  ros.md  workshop-robomaker.md
HelloWorld/: README.md
HelloWorld/HelloWorldSampleAppROS2FoxyGazebo11/: Dockerfile
HelloWorld/HelloWorldSampleAppROS2FoxyGazebo11RobotApp/: Dockerfile  robot-entrypoint.sh
HelloWorld/HelloWorldSampleAppROS2FoxyGazebo11SimApp/: Dockerfile  simulation-entrypoint.sh
cdk-robomaker/: README.md  cdk.json  package-lock.json  package.json
cdk-robomaker/lib/: cdk-robomaker-stack.ts
cdk-robomaker/test/: cdk-robomaker.test.ts
cloud-connected-robots/: README.md
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/: Dockerfile  README.md  app_entrypoint.sh  build_and_upload.sh  docker-compose.yaml
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/greengrass/: recipe.yaml
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/robot_ws/src/jetbot_base/: package.xml  setup.cfg  setup.py
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/robot_ws/src/jetbot_base/jetbot_base/: jetbot_camera.py  jetbot_motor_controller.py  jetbot_oled_display.py
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/robot_ws/src/jetbot_move/: package.xml  setup.cfg  setup.py
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/robot_ws/src/stats_collector/: package.xml  setup.cfg  setup.py
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/robot_ws/src/stats_collector/launch/: stats_collector.launch.py
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/robot_ws/src/stats_collector/stats_collector/: collector.py
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/simulation_ws/src/gazebo_dance_world/: CMakeLists.txt  package.xml
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/simulation_ws/src/jetbot_dance_simulation/: package.xml  setup.cfg  setup.py
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/simulation_ws/src/jetbot_dance_simulation/jetbot_dance_simulation/: jetbot_move_direction.py  spawn_jetbot.py
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/simulation_ws/src/jetbot_dance_simulation/launch/: spawn_jetbot.launch.py
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/simulation_ws/src/jetbot_description/: CMakeLists.txt  README.md  package.xml
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/simulation_ws/src/jetbot_description/models/robomaker-jetbot/: model.config  model.sdf
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/simulation_ws/src/jetbot_description/models/robomaker-jetbot/meshes/: lidar-top.dae  lidar.dae  waveshare-jetbot-base-link-convex-hull.stl  waveshare-jetbot-wheel_link.dae
cloud-connected-robots/building-cloud-connected-robots-reinvent2021/simulation_ws/src/jetbot_description/urdf/: robomaker-jetbot.gazebo.xacro  robomaker-jetbot.urdf.xacro
(+23 files in other folders)
